WIP on restore functionality